--- a/nrfbazelify/testdata/bazelifyrc_target_overrides/sdkdir/.bazelifyrc
+++ b/nrfbazelify/testdata/bazelifyrc_target_overrides/sdkdir/.bazelifyrc
@@ -1,8 +1,8 @@
-target_overrides {
+target_overrides <
   key: "c.h"
   value: "//bazelifyrc_target_overrides/sdkdir/c"
-}
-target_overrides {
+>
+target_overrides <
   key: "d.h"
   value: "//bazelifyrc_target_overrides/outsidesdkdir:d"
-}
+>
