--- a/nrfbazelify/BUILD
+++ b/nrfbazelify/BUILD
@@ -17,5 +17,11 @@ go_test(
     srcs = ["nrfbazelify_test.go"],
     data = glob(["testdata/**"]),
     embed = [":go_default_library"],
-    deps = ["//internal/buildfile"],
+    deps = [
+        "//bazelifyrc:bazelifyrc_go_proto",
+        "//internal/buildfile",
+        "@com_github_golang_protobuf//proto:go_default_library",
+        "@com_github_google_go_cmp//cmp:go_default_library",
+        "@org_golang_google_protobuf//testing/protocmp:go_default_library",
+    ],
 )
