Support remapping header files to cc_binary-specified labels
Remap enables us to map files like sdk_config.h to configurable targets based on the cc_binary rule. We generate a custom nrf_cc_binary rule and a bunch of label_attr rules to make this work.

--- a/internal/buildfile/BUILD
+++ b/internal/buildfile/BUILD
@@ -4,5 +4,8 @@ go_library(
     name = "buildfile",
     srcs = ["buildfile.go"],
     importpath = "github.com/Michaelhobo/nrfbazel/internal/buildfile",
-    visibility = ["//nrfbazelify:__subpackages__"],
+    visibility = [
+        "//internal/remap:__subpackages__",
+        "//nrfbazelify:__subpackages__",
+    ],
 )
