Rewrite code to merge cyclic dependencies

--- a/internal/bazel/BUILD
+++ b/internal/bazel/BUILD
@@ -10,5 +10,6 @@ go_library(
 go_test(
     name = "go_default_test",
     srcs = ["label_test.go"],
+    args = ["-test.v"],
     embed = [":go_default_library"],
 )
