--- a/internal/buildfile/BUILD
+++ b/internal/buildfile/BUILD
@@ -1,7 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
-    name = "buildfile",
+    name = "go_default_library",
     srcs = ["buildfile.go"],
     importpath = "github.com/Michaelhobo/nrfbazel/internal/buildfile",
     visibility = [
