--- a/internal/remap/BUILD
+++ b/internal/remap/BUILD
@@ -1,9 +1,9 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 
 go_library(
-    name = "remap",
+    name = "go_default_library",
     srcs = ["remap.go"],
     importpath = "github.com/Michaelhobo/nrfbazel/internal/remap",
     visibility = ["//nrfbazelify:__subpackages__"],
-    deps = ["//internal/buildfile"],
+    deps = ["//internal/buildfile:go_default_library"],
 )
