Refactor bazelifyrc into validated Config struct
We were doing ad-hoc validation of bazelifyrc data as needed. Now, we do
some post-processing and validation when we read the .bazelifyrc file
for the first time. This makes code cleaner because we only pass the
Config struct around, and there's no need to do any processing.

--- a/nrfbazelify/BUILD
+++ b/nrfbazelify/BUILD
@@ -3,12 +3,12 @@ load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "go_default_library",
     srcs = [
+        "config.go",
         "graph.go",
         "hint.go",
         "nodes.go",
         "nrfbazelify.go",
         "output.go",
-        "rc.go",
         "walk.go",
     ],
     importpath = "github.com/Michaelhobo/nrfbazel/nrfbazelify",
