Add ability to output graph progression
After every node, we can now output a dot graph. This makes debugging
the system a lot easier.

--- a/example/BUILD
+++ b/example/BUILD
@@ -1,12 +1,12 @@
 load("@rules_cc//cc:defs.bzl", "cc_library")
 package(default_visibility=["//visibility:public"])
-cc_library(name="79d8d6e3-ac40-4f03-9361-415ade6cb10b", hdrs = ["a.h", "b.h", "c.h"])
+cc_library(name="a", includes = ["."], deps = [":a1f1b8c8-4d62-4ee7-9ad0-c3df1651eb53"])
 
-cc_library(name="a", includes = ["."], deps = [":79d8d6e3-ac40-4f03-9361-415ade6cb10b"])
+cc_library(name="a1f1b8c8-4d62-4ee7-9ad0-c3df1651eb53", hdrs = ["a.h", "b.h", "c.h"])
 
-cc_library(name="b", includes = ["."], deps = [":79d8d6e3-ac40-4f03-9361-415ade6cb10b"])
+cc_library(name="b", includes = ["."], deps = [":a1f1b8c8-4d62-4ee7-9ad0-c3df1651eb53", ":c"])
 
-cc_library(name="c", includes = ["."], deps = [":79d8d6e3-ac40-4f03-9361-415ade6cb10b", ":b"])
+cc_library(name="c", includes = ["."], deps = [":a1f1b8c8-4d62-4ee7-9ad0-c3df1651eb53"])
 
 cc_library(name="nrfbazelify_empty_remap")
 
