Print out basic graph stats after successful runs
This is used to help understand the system and to debug.
For example, this made it clear that the graph isn't deterministic,
since the edge count changes between runs.

--- a/nrfbazelify/BUILD
+++ b/nrfbazelify/BUILD
@@ -5,6 +5,7 @@ go_library(
     srcs = [
         "config.go",
         "graph.go",
+        "graphstats.go",
         "groups.go",
         "hint.go",
         "nodes.go",
