Require a bazelifyrc in SDK as a sanity check
Since nrfbazelify performs some destructive actions (e.g. deleting BUILD
files recursively), we don't want to run it in the wrong directory. As a
sanity check, require the .bazelifyrc file to be present. I don't think
this will be a burden anyway, because most SDK's require some
configuration to get them to run anyway.

--- a/nrfbazelify/BUILD
+++ b/nrfbazelify/BUILD
@@ -31,7 +31,10 @@ go_library(
 
 go_test(
     name = "go_default_test",
-    srcs = ["nrfbazelify_test.go"],
+    srcs = [
+        "config_test.go",
+        "nrfbazelify_test.go",
+    ],
     args = ["-test.v"],
     data = glob(["testdata/**"]),
     embed = [":go_default_library"],
