Switch to copts-based includes
The includes field in cc_library wasn't being inherited by things that depended on it. Instead, use the copts field, with -I<include dir>
The copts are now specified by the depender, instead of the dependency.

--- a/nrfbazelify/testdata/bazelifyrc_hint_keep_override/.bazelifyrc
+++ b/nrfbazelify/testdata/bazelifyrc_hint_keep_override/.bazelifyrc
@@ -1,4 +1,4 @@
-target_overrides <
-  key: "overridden.h"
-  value: "//something"
->
+include_overrides {
+  include: "overridden.h"
+  label: "//something"
+}
