nrf_defines sets all SDK library defines
The defines on the nrf_cc_binary aren't being propagated to the files in the SDK. This creates a string_list_setting called nrf_defines, which will perform the propagation. All cc_library rules in the SDK will now use the nrf_defines rule to pull in these includes.

--- a/example/dir/BUILD
+++ b/example/dir/BUILD
@@ -6,12 +6,14 @@ exports_files(["c.h"])
 
 cc_library(
     name = "c",
+    defines = "//example:nrf_defines",
     deps = ["//example:maingroup"],
 )
 
 cc_library(
     name = "uses_cyclic",
     hdrs = ["uses_cyclic.h"],
-    includes = ["example/dir"],
+    copts = ["-Iexample/dir"],
+    defines = "//example:nrf_defines",
     deps = [":c"],
 )
