--- a/example/dir2/BUILD
+++ b/example/dir2/BUILD
@@ -6,11 +6,12 @@ exports_files(["d.h"])
 
 cc_library(
     name = "d",
+    defines = "//example:nrf_defines",
     deps = ["//example:maingroup"],
 )
 
 cc_library(
     name = "used_by_cyclic",
     hdrs = ["used_by_cyclic.h"],
-    includes = ["example/dir2"],
+    defines = "//example:nrf_defines",
 )
